option('desktop_integration', type : 'feature', value : 'enabled', description : 'Enable desktop integration functions')
option('thumbnailer', type : 'feature', value : 'enabled', description : 'Enable thumbnailer functions')
option('shared_only', type : 'boolean', value : false, description : 'Build and distribute shared and hashlib only (for use with AppImageKit and AppImageUpdate)')
