option('desktop_integration', type : 'feature', value : 'enabled', description : 'Enable desktop integration functions')
option('thumbnailer', type : 'feature', value : 'enabled', description : 'Enable thumbnailer functions')
option('all', type : 'feature', value : 'enabled', description : 'Build and distribute all objects (disable for use with AppImageKit and AppImageUpdate)')
